# llvm-project

.github/workflows/: release-lit.yml
llvm/utils/lit/: pyproject.toml
